[tool.poetry]
name = "netrics-measurements"
version = "0.0.1-rc.13"
description = "The extensible network measurements framework"
license = "MIT"
authors = [
  "Jesse London <jesselondon@gmail.com>",
  "Kyle MacMillan <macmillan@uchicago.edu>",
]
packages = [{include = "netrics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fate-scheduler = "0.1.0-rc.11"
netifaces = "^0.11.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
# main entrypoints
netrics = "netrics:main"
"netrics.s" = "netrics:serve"
"netrics.d" = "netrics:daemon"

# built-in measurement modules
netrics-dev = "netrics.measurement.dev:main"
netrics-dns-latency = "netrics.measurement.dns_latency:main"
netrics-hops = "netrics.measurement.hops:main"
netrics-hops-scamper = "netrics.measurement.hops:main"
netrics-hops-traceroute = "netrics.measurement.hops_traceroute:main"
netrics-ip = "netrics.measurement.ip:main"
netrics-lml = "netrics.measurement.lml:main"
netrics-lml-scamper = "netrics.measurement.lml:main"
netrics-lml-traceroute = "netrics.measurement.lml_traceroute:main"
netrics-ndt7 = "netrics.measurement.ndt7:main"
netrics-ookla = "netrics.measurement.ookla:main"
netrics-ping = "netrics.measurement.ping:main"
netrics-traceroute = "netrics.measurement.traceroute:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
